--- a/static/branding/irf.css
+++ b/static/branding/irf.css
@@ -72,8 +72,8 @@
   --irf-orange-20: #f8e1d5;
   --logo-fg: white;
   --logo-height: 60px;
-  --logo-width: 275px;
-  --logo-url: url("irf-neg.svg");
+  --logo-width: 60px;
+  --logo-url: url("irf-symbol-neg.svg");
   /* Minimum whitespace around logo is half its height in all directions */
   --logo-whitespace: calc(var(--logo-height) * 0.1);
   --header-height: calc(var(--logo-height) * 1.3);
@@ -618,7 +618,7 @@ input+label {
 
 @media (max-width: 450px) {
   body {
-    --logo-url: url("https://www.irf.se/branding/irf-symbol-neg.svg");
+    --logo-url: url("irf-symbol-neg.svg");
     --logo-width: var(--logo-height);
   }
 }
